--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 			<artifactId>spring-security-taglibs</artifactId>
 		</dependency>
 
+		<!-- added by Ochiroo -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-quartz</artifactId>
@@ -78,6 +79,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
+		<!-- added by Ochiroo -->
+
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
