--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -18,6 +18,7 @@
     <param-name>contextConfigLocation</param-name>
     <param-value>
         		/WEB-INF/applicationContext.xml
+				/WEB-INF/config/security-Context.xml 
          </param-value>
   </context-param>
   <listener>
@@ -26,7 +27,8 @@
 </listener-class>
   </listener>
   
-<!--   <filter>
+  
+<filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>
 			org.springframework.web.filter.DelegatingFilterProxy
@@ -35,7 +37,7 @@
   <filter-mapping>
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
-  </filter-mapping> -->
+  </filter-mapping>
   
   <error-page>
     <error-code>404</error-code>
